--- a/src/app/pages/despesas/despesas.component.html
+++ b/src/app/pages/despesas/despesas.component.html
@@ -15,12 +15,12 @@
   </thead>
   <tbody>
     <tr *ngFor="let despesa of despesa">
-      <td>{{despesa.id}}</td>
+      <td>{{despesa.idDespesa}}</td>
       <td>{{despesa.nome}}</td>
       <td>{{despesa.categoria}}</td>
       <td>{{despesa.data}}</td>
       <td>{{despesa.valor | currency: 'BRL'}}</td>
-      <mat-icon routerLink="/despesas/editar/{{despesa.id}}" style="margin-right: 10px;">edit</mat-icon>
+      <mat-icon routerLink="/despesas/editar/{{despesa.idDespesa}}" style="margin-right: 10px;">edit</mat-icon>
       <mat-icon (click)="deletar(despesa)">delete</mat-icon>
     </tr>
   </tbody>
