implemented the gerarRelatorioDespesas

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,6 +6,7 @@
     <div class="d-flex flex-column">
       <a routerLink="/despesas/cadastrar" class="btn btn-primary my-2">Cadastrar</a>
       <a routerLink="/despesas" class="btn btn-primary my-2">Consultar</a>
+      <app-relatorio></app-relatorio>
     </div>
   </div>
 </body>
