created the date filter feature for the reports

--- a/src/app/pages/cadastrar-despesa/cadastrar-despesa.component.html
+++ b/src/app/pages/cadastrar-despesa/cadastrar-despesa.component.html
@@ -33,7 +33,7 @@
           <label for="data" class="form-label">Data</label>
             <input
               id="data"
-              type="text"
+              type="date"
               class="form-control"
               formControlName="data"
             />
