--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,15 @@
     <div class="d-flex flex-column">
       <a routerLink="/despesas/cadastrar" class="btn btn-primary my-2">Cadastrar</a>
       <a routerLink="/despesas" class="btn btn-primary my-2">Consultar</a>
-      <app-relatorio></app-relatorio>
+
+      <label>Data Início:</label>
+      <input type="date" [(ngModel)]="dataInicio">
+
+      <label>Data Fim:</label>
+      <input type="date" [(ngModel)]="dataFim">
+
+      <app-relatorio [dataInicio]="dataInicio" [dataFim]="dataFim"></app-relatorio>
+
     </div>
   </div>
 </body>
